--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lucide-react": "^0.546.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
